/**
 * In charge to handle MediaSourceExtension
 */
export interface MediaSourceExtension {
  /**
   * In charge to set source
   * @param src media source
   */
  setSrc(src: any);

  /**
   * In charge to get source
   */
  getSrc(): any;
}
